[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/tower_n.gd" type="Script" id=1]
[ext_resource path="res://tiles/tileset64x64.png" type="Texture" id=2]

[node name="tower_n" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.862745, 0, 1 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -8, 0, 0, 8, -8 )

[node name="schedule" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_tower_n_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_tower_n_body_entered"]
[connection signal="timeout" from="schedule" to="." method="_on_schedule_timeout"]
